# rmlib

./: .gitignore  Makefile  README.md  conda-lock.yml  environment.yml  mypy.ini  pyproject.toml  shell.nix
scripts/: pdf2remarkable.sh
src/rmlib/: io.py
src/rmlib/cli/: __main__.py  make_template.py  remove_trash.py
src/templates/: cursive.tex  print.tex  worksheet.cls
templates/src/: cursive_a.tex  cursive_alphabet.tex  cursive_b.tex  cursive_c.tex  cursive_d.tex  cursive_e.tex  cursive_f.tex  cursive_g.tex  cursive_h.tex  cursive_i.tex  cursive_j.tex  cursive_k.tex  cursive_l.tex  cursive_m.tex  cursive_n.tex  cursive_o.tex  cursive_p.tex  cursive_q.tex  cursive_r.tex  cursive_s.tex  cursive_t.tex  cursive_u.tex  cursive_v.tex  cursive_w.tex  cursive_x.tex  cursive_y.tex  cursive_z.tex  worksheet.cls
